Refactor Portfolio.html structure and content
Updated the portfolio HTML structure and content for better clarity and presentation.

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -44,7 +44,7 @@
                 <h1 class="text-4xl font-bold mb-2 text-black">Anish Subudhi</h1>
                 <p class="text-[#768CFF] font-medium mb-4">Wallpaper | Widget | Icon creator | Engineer</p>
                 <p class="text-gray-600 leading-relaxed">
-                    Hi, my name is Anish. I am Wallpaper | Widget | Icon creator 🎨| Engineer | Passionate about mobile screen customization 📱 | I love Making stuff which are usefull for everyone!
+                    Hi, my name is Anish. I make Wallpapers | Widgets | Icons 🎨| Engineer | Passionate about mobile screen customization 📱 | I love Making stuff which are usefull for everyone!
                 </p>
             </div>
         </div>
@@ -130,4 +130,5 @@
         </div>
     </div>
 </body>
+
 </html>
