--- a/Portfolio.html
+++ b/Portfolio.html
@@ -105,7 +105,7 @@
                     </a>
                     <!-- Project 2 -->
                     <a href="https://play.google.com/store/apps/details?id=misty.dd.kwgt" target="_blank" class="block bg-white rounded-3xl overflow-hidden border border-gray-100 shadow-sm card-hover">
-                        <img src="https://raw.githubusercontent.com/miliotiz/AI-Calculator-/refs/heads/main/Misty.png?token=GHSAT0AAAAAADQXSPSXW7OP4CBUZ5SDTQNE2LI7NYQ" alt="Misty KWGT" class="w-full h-48 object-cover">
+                        <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/Misty.png" alt="Misty KWGT" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <div class="flex items-center justify-between mb-2">
                                 <h3 class="text-xl font-bold">Misty KWGT</h3>
@@ -116,7 +116,7 @@
                     </a>
                     <!-- Project 3 -->
                     <a href="https://play.google.com/store/apps/details?id=com.the1uxdarkfluffy" target="_blank" class="block bg-white rounded-3xl overflow-hidden border border-gray-100 shadow-sm card-hover">
-                        <img src="https://raw.githubusercontent.com/miliotiz/AI-Calculator-/refs/heads/main/dark_fluffy.png?token=GHSAT0AAAAAADQXSPSWI4T2FUDDCRN7TPXS2LI7OGQ" alt="Dark Fluffy Icons" class="w-full h-48 object-cover">
+                        <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/dark_fluffy.png" alt="Dark Fluffy Icons" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <div class="flex items-center justify-between mb-2">
                                 <h3 class="text-xl font-bold">Dark Fluffy Icons</h3>
@@ -130,5 +130,4 @@
         </div>
     </div>
 </body>
-
 </html>
