--- a/index.html
+++ b/index.html
@@ -7,10 +7,55 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #FFFFFF;
+        :root {
+            --background: #eff1f5;
+
+            --card-border: #7c7f93;
+            --text: #4c4f69;
+
+            --action-color: #fe640b;
+            --action-text-color: var(--background)
         }
+
+        .dark {
+            --background: #1e1e2e;
+
+            --card-border: #9399b2;
+            --text: #cdd6f4;
+
+            --action-color: #fab387;
+            --action-text-color: var(--background)
+        }
+
+        body, html {
+            font-family: 'Inter', sans-serif;
+            background: var(--background);
+
+            color: var(--text);
+        }
+
+        .subtext {
+            color: var(--text);
+            opacity: 0.7;
+        }
+         
+        .action-btn {
+            background: var(--action-color);
+            border-radius: 9999999rem;
+            padding: 0.5rem 1.5rem;
+            font-weight: bold;
+            font-size: 0.875rem;
+        }
+
+        .mark {
+            background: var(--action-color);
+            color: var(--action-text-color);
+            padding: 0.25rem 0.75rem;
+            font-weight: semibold;
+            font-size: 0.8rem;
+            border-radius: 999999rem;
+        }
+
         .bento-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -26,24 +71,28 @@
                 grid-template-columns: 1fr;
             }
         }
-        .card-hover {
+
+        .card {
             transition: transform 0.2s ease, box-shadow 0.2s ease;
+            border: solid 2px var(--card-border);
+
         }
-        .card-hover:hover {
+        .card:hover {
             transform: translateY(-4px);
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
-<body class="p-4 md:p-8 lg:p-12 max-w-7xl mx-auto">
+<body class="dark">
+        <div class="p-4 md:p-8 lg:p-12 max-w-7xl mx-auto">
     <div class="flex flex-col lg:flex-row gap-12">
         <!-- Profile Section -->
         <div class="lg:w-1/3 lg:sticky lg:top-12 h-fit">
-            <div class="bg-white p-8 rounded-2xl border border-gray-100 shadow-sm text-center lg:text-left">
-                <img src="https://github.com/miliotiz.png" alt="Anish Subudhi" class="w-32 h-32 rounded-full mx-auto lg:mx-0 mb-6 border-4 border-[#768CFF]/10">
-                <h1 class="text-4xl font-bold mb-2 text-black">Anish Subudhi</h1>
-                <p class="text-[#768CFF] font-medium mb-4">Wallpaper | Widget | Icon creator | Engineer</p>
-                <p class="text-gray-600 leading-relaxed">
+            <div class="p-8 rounded-2xl card shadow-sm text-center lg:text-left">
+                <img src="https://github.com/miliotiz.png" alt="Anish Subudhi" class="w-32 h-32 rounded-full mx-auto lg:mx-0 mb-6">
+                <h1 class="text-4xl font-bold mb-2">Anish Subudhi</h1>
+                <p class="text-[var(--action-color)] font-medium mb-4">Wallpaper | Widget | Icon creator | Engineer</p>
+                <p class="leading-relaxed">
                     Hi, my name is Anish. I make Wallpapers | Widgets | Icons 🎨| Engineer | Passionate about mobile screen customization 📱 | I love Making stuff which are usefull for everyone!
                 </p>
             </div>
@@ -53,32 +102,32 @@
         <div class="lg:w-2/3 space-y-12">
             <!-- Social Handles -->
             <section>
-                <h2 class="text-xl font-semibold mb-6 text-gray-400 uppercase tracking-wider">Social handles</h2>
+                <h2 class="text-xl font-semibold mb-6 uppercase tracking-wider">Social handles</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
                     <!-- Telegram -->
-                    <a href="https://t.me/aboutmiliotizz" target="_blank" class="block bg-[#0088cc] p-8 rounded-3xl text-white card-hover relative overflow-hidden group">
+                    <a href="https://t.me/aboutmiliotizz" target="_blank" class="block bg-[#0088cc] p-8 rounded-3xl text-white card relative overflow-hidden group">
                         <div class="relative z-10">
                             <h3 class="text-2xl font-bold mb-2">JOIN TELEGRAM</h3>
                             <p class="text-white/80 mb-6 text-sm">Stay updated with latest news, exclusive content, and real-time support.</p>
-                            <span class="inline-block bg-white text-[#0088cc] px-6 py-2 rounded-full font-bold text-sm">JOIN NOW</span>
+                            <span class="action-btn ">JOIN NOW</span>
                         </div>
                         <svg class="absolute right-[-20px] top-[-20px] w-48 h-48 text-white/10 rotate-12" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19-.14.75-.42 1-.68 1.03-.58.05-1.02-.38-1.58-.75-.88-.58-1.38-.94-2.23-1.5-.99-.65-.35-1.01.22-1.59.15-.15 2.71-2.48 2.76-2.69.01-.03.01-.14-.07-.2-.08-.06-.19-.04-.27-.02-.12.02-1.96 1.25-5.54 3.69-.52.36-1 .53-1.42.52-.47-.01-1.37-.26-2.03-.48-.82-.27-1.47-.42-1.42-.88.03-.24.35-.49.96-.75 3.78-1.65 6.31-2.74 7.58-3.27 3.61-1.51 4.35-1.77 4.84-1.78.11 0 .35.03.5.16.12.1.16.23.18.33.02.11.02.24.01.37z"/></svg>
                     </a>
                     <!-- X -->
-                    <a href="https://x.com/miliotizz" target="_blank" class="block bg-black p-8 rounded-3xl text-white card-hover relative overflow-hidden group">
+                    <a href="https://x.com/miliotizz" target="_blank" class="bg-black block p-8 rounded-3xl text-white card relative overflow-hidden group">
                         <div class="relative z-10">
                             <h3 class="text-2xl font-bold mb-2">FOLLOW ON X</h3>
                             <p class="text-white/80 mb-6 text-sm">Get the latest updates, breaking news, and behind-the-scenes content.</p>
-                            <span class="inline-block bg-white text-black px-6 py-2 rounded-full font-bold text-sm">FOLLOW</span>
+                            <span class="action-btn ">FOLLOW</span>
                         </div>
                         <svg class="absolute right-[-20px] top-[-20px] w-48 h-48 text-white/10 rotate-12" fill="currentColor" viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
                     </a>
                     <!-- Github -->
-                    <a href="https://github.com/miliotiz" target="_blank" class="block bg-gradient-to-tr from-[#f09433] via-[#dc2743] to-[#bc1888] p-8 rounded-3xl text-white card-hover relative overflow-hidden group">
+                    <a href="https://github.com/miliotiz" target="_blank" class="block bg-gradient-to-tr from-[#f09433] via-[#dc2743] to-[#bc1888] p-8 rounded-3xl text-white card relative overflow-hidden group">
                         <div class="relative z-10">
                             <h3 class="text-2xl font-bold mb-2">FOLLOW ON Github</h3>
                             <p class="text-white/80 mb-6 text-sm">Stay connected with my latest Projects.</p>
-                            <span class="inline-block bg-white text-[#dc2743] px-6 py-2 rounded-full font-bold text-sm">FOLLOW NOW</span>
+                            <span class="action-btn ">FOLLOW NOW</span>
                         </div>
                        <svg class="absolute right-[-20px] top-[-20px] w-48 h-48 text-white/10 rotate-12"
          fill="currentColor" viewBox="0 0 24 24">
@@ -93,42 +142,44 @@
                 <h2 class="text-xl font-semibold mb-6 text-gray-400 uppercase tracking-wider">Apps</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <!-- Project 1 -->
-                    <a href="https://play.google.com/store/apps/details?id=wallzen.dd.walls" target="_blank" class="block bg-white rounded-3xl overflow-hidden border border-gray-100 shadow-sm card-hover">
-                        <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/wallzen.png" alt="wallzen" class="w-full h-48 object-cover">
+                    <a href="https://play.google.com/store/apps/details?id=wallzen.dd.walls" target="_blank" class="block rounded-3xl overflow-hidden shadow-sm card">
+                        <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/wallzen.png" alt="wallzen" class="w-full h-48 object-fill">
                         <div class="p-6">
                             <div class="flex items-center justify-between mb-2">
                                 <h3 class="text-xl font-bold">wallzen</h3>
-                                <span class="bg-blue-100 text-blue-600 px-3 py-1 rounded-full text-xs font-semibold">Android</span>
+                                <span class="mark">Android</span>
                             </div>
-                            <p class="text-gray-500 text-sm">An AI generated wallpaper app with various categories making ur phone perfect.</p>
+                            <p class="subtext text-sm">An AI generated wallpaper app with various categories making ur phone perfect.</p>
                         </div>
                     </a>
                     <!-- Project 2 -->
-                    <a href="https://play.google.com/store/apps/details?id=misty.dd.kwgt" target="_blank" class="block bg-white rounded-3xl overflow-hidden border border-gray-100 shadow-sm card-hover">
-                        <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/Misty.png" alt="Misty KWGT" class="w-full h-48 object-cover">
+                    <a href="https://play.google.com/store/apps/details?id=misty.dd.kwgt" target="_blank" class="block rounded-3xl overflow-hidden shadow-sm card">
+                        <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/Misty.png" alt="Misty KWGT" class="w-full h-48 object-fill">
                         <div class="p-6">
                             <div class="flex items-center justify-between mb-2">
                                 <h3 class="text-xl font-bold">Misty KWGT</h3>
-                                <span class="bg-blue-100 text-blue-600 px-3 py-1 rounded-full text-xs font-semibold">Android</span>
+                                <span class="mark">Android</span>
                             </div>
-                            <p class="text-gray-500 text-sm">Experience the elegance of translucent widgets on your Android device.</p>
+                            <p class="subtext text-sm">Experience the elegance of translucent widgets on your Android device.</p>
                         </div>
                     </a>
                     <!-- Project 3 -->
-                    <a href="https://play.google.com/store/apps/details?id=com.the1uxdarkfluffy" target="_blank" class="block bg-white rounded-3xl overflow-hidden border border-gray-100 shadow-sm card-hover">
+                    <a href="https://play.google.com/store/apps/details?id=com.the1uxdarkfluffy" target="_blank" class="block rounded-3xl overflow-hidden shadow-sm card">
                         <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/dark_fluffy.png" alt="Dark Fluffy Icons" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <div class="flex items-center justify-between mb-2">
-                                <h3 class="text-xl font-bold">Dark Fluffy Icons</h3>
-                                <span class="bg-blue-100 text-blue-600 px-3 py-1 rounded-full text-xs font-semibold">Android</span>
+                                <h3 class="text-xl font-bold">ark Fluffy Icons</h3>
+                                <span class="mark">Android</span>
                             </div>
-                            <p class="text-gray-500 text-sm">Dark Fluffy icons which looks fantastic on ur device .</p>
+                            <p class="subtext text-sm">Dark Fluffy icons which looks fantastic on ur device .</p>
                         </div>
                     </a>
+
                 </div>
             </section>
         </div>
-    </div>
+
+    </div></div>
 </body>
 </html>
 
