--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/wallzen.png" alt="wallzen" class="w-full h-48 object-fill">
                         <div class="p-6">
                             <div class="flex items-center justify-between mb-2">
-                                <h3 class="text-xl font-bold">wallzen</h3>
+                                <h3 class="text-xl font-bold">Wallzen</h3>
                                 <span class="mark">Android</span>
                             </div>
                             <p class="subtext text-sm">An AI generated wallpaper app with various categories making ur phone perfect.</p>
@@ -168,7 +168,7 @@
                         <img src="https://raw.githubusercontent.com/miliotiz/WallZen.github.io/refs/heads/main/dark_fluffy.png" alt="Dark Fluffy Icons" class="w-full h-48 object-cover">
                         <div class="p-6">
                             <div class="flex items-center justify-between mb-2">
-                                <h3 class="text-xl font-bold">ark Fluffy Icons</h3>
+                                <h3 class="text-xl font-bold">Dark Fluffy Icons</h3>
                                 <span class="mark">Android</span>
                             </div>
                             <p class="subtext text-sm">Dark Fluffy icons which looks fantastic on ur device .</p>
@@ -182,4 +182,5 @@
     </div></div>
 </body>
 </html>
+
 
